# rememble

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
rememble/: __init__.py  api.py  api_models.py  client.py  config.py  daemon.py  db.py  hooks.py  models.py  server.py  service.py  setup.py  state.py  version.py
rememble/embeddings/: __init__.py  base.py  compat.py  factory.py  local.py  ollama.py
rememble/ingest/: __init__.py  chunker.py
rememble/rag/: context.py
rememble/search/: fusion.py  graph.py  need.py  temporal.py  text.py  vector.py
rememble/server/: __init__.py  api.py  api_models.py  app.py  cli.py  mcp.py
src/rememble/: __init__.py  config.py  server.py
src/rememble/embeddings/: __init__.py  cohere.py  factory.py  local.py
src/rememble/ingest/: chunker.py
src/rememble/rag/: __init__.py  context.py
src/rememble/search/: __init__.py  graph.py  vector.py
tests/: conftest.py  test_activation.py  test_api.py  test_cli.py  test_client.py  test_daemon.py  test_db.py  test_embeddings.py  test_hooks.py  test_ingest.py  test_need.py  test_rag.py  test_search.py  test_server.py  test_service.py
