[project]
name = "rememble"
version = "0.1.0"
description = "Local MCP memory server with hybrid search, knowledge graph, and RAG"
readme = "README.md"
license = "MIT"
authors = [{ name = "Nik Cubrilovic", email = "git@nikcub.me" }]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0", "onnxruntime>=1.19"]
all = ["rememble[local]"]

[project.scripts]
rememble = "rememble.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rememble"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "basedpyright>=1.20",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportCallIssue = "warning"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
